--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ build-backend = "flit_core.buildapi"
 name = "basicenum"
 version = "2023.0"
 authors = [{name = "Brett Cannon", email = "brett@python.org"}]
+description = "Simplified enums"
 readme = "README.md"
 keywords = ["enum"]
 license = {file = "LICENSE"}
 requires-python = ">=3.9"
-classifiers = ["License :: OSI Approved :: MIT License"]
-dynamic = ["description"]
+classifiers = ["License :: OSI Approved :: BSD License"]
 
 [project.urls]
 Repository = "https://github.com/brettcannon/basicenum"
