--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,25 +2,26 @@ name: "Continuous Integration"
 
 on: ["pull_request", "workflow_dispatch"]
 
-test:
-    name: Test Python ${{ matrix.python_version }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python_version: ["3.9", "3.10", "3.11", "3.12"]
+jobs:
+  test:
+      name: Test Python ${{ matrix.python_version }}
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python_version: ["3.9", "3.10", "3.11", "3.12"]
 
-    steps:
-      - uses: actions/checkout@v4
+      steps:
+        - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python_version }}
-          cache: "pip"
-          cache-dependency-path: "pyproject.toml"
+        - name: Set up Python
+          uses: actions/setup-python@v4
+          with:
+            python-version: ${{ matrix.python_version }}
+            cache: "pip"
+            cache-dependency-path: "pyproject.toml"
 
-      - name: Install
-        run: python -m install -e .[test]
+        - name: Install
+          run: python -m install -e .[test]
 
-      - name: Test
-        run: python -m pytest .
+        - name: Test
+          run: python -m pytest .
