--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
             cache-dependency-path: "pyproject.toml"
 
         - name: Install
-          run: python -m install -e .[test]
+          run: python -m pip install -e .[test]
 
         - name: Test
           run: python -m pytest .
