--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ classifiers = ["License :: OSI Approved :: BSD License"]
 
 [project.urls]
 Repository = "https://github.com/brettcannon/basicenum"
+"Fiscal support" = "https://github.com/sponsors/brettcannon/"
 
 [project.optional-dependencies]
 test = ["pytest"]
